test/users/weili/raiseType.good
raiseType.chpl:3: error: syntax error near 'return'
raiseType.chpl:4: error: syntax error near 'return'
